force-app/main/default/objects/Day_in_the_office__c/Day_in_the_office__c.object-meta.xml
<CustomObject>
    <label>Day In The Office</label>
    <nameField>
        <displayFormat>ATT-{0000}</displayFormat>
        <label>Day in the office Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Days In The Office</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>