force-app/main/default/objects/Day_in_the_office__c/fields/Attendance_Date__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Date__c</fullName>
    <label>Attendance Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>