force-app/main/default/objects/Day_in_the_office__c/fields/Attendee__c.field-meta.xml
<CustomField>
    <fullName>Attendee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attendee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Days_In_The_Office</relationshipName>
    <type>Lookup</type>
</CustomField>