force-app/main/default/objects/Day_in_the_office__c/fields/AttendeeName__c.field-meta.xml
<CustomField>
    <fullName>AttendeeName__c</fullName>
    <formula>If(Attendee__c &lt;&gt; null,Attendee__r.LastName + &apos; &apos; +  Attendee__r.FirstName,&apos;&apos;)
&amp;
If(Visitor__c &lt;&gt; null, Visitor__r.LastName + &apos; &apos; + Visitor__r.FirstName,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AttendeeName</label>
    <type>Text</type>
</CustomField>