force-app/main/default/objects/Day_in_the_office__c/fields/Day_In_the_Week__c.field-meta.xml
<CustomField>
    <fullName>Day_In_the_Week__c</fullName>
    <formula>WEEKDAY(Attendance_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day In the Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>