force-app/main/default/objects/Day_in_the_office__c/fields/Day_of_the_Week__c.field-meta.xml
<CustomField>
    <fullName>Day_of_the_Week__c</fullName>
    <formula>CASE( Day_In_the_Week__c, 1, &quot;Sunday&quot; , 2, &quot;Monday&quot;,3,&quot;Tuesday&quot;,4,&quot;Wednesday&quot;,5,&quot;Thursday&quot;,6,&quot;Friday&quot;,7,&quot;Saturday&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day of the Week</label>
    <type>Text</type>
</CustomField>