force-app/main/default/objects/Day_in_the_office__c/fields/isCurrentUserAttendee__c.field-meta.xml
<CustomField>
    <fullName>isCurrentUserAttendee__c</fullName>
    <formula>IF($User.Id =   Attendee__c, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isCurrentUserAttendee</label>
    <type>Checkbox</type>
</CustomField>