force-app/main/default/objects/Day_in_the_office__c/fields/unique_identifier__c.field-meta.xml
<CustomField>
    <fullName>unique_identifier__c</fullName>
    <externalId>true</externalId>
    <label>Unique Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>