force-app/main/default/objects/Day_in_the_office__c/fields/Visitor__c.field-meta.xml
<CustomField>
    <fullName>Visitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visitor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Days In The Office</relationshipLabel>
    <relationshipName>Days_In_The_Office</relationshipName>
    <type>Lookup</type>
</CustomField>