force-app/main/default/objects/Day_in_the_office__c/recordTypes/Employee_Attendance.recordType-meta.xml
<RecordType>
    <fullName>Employee_Attendance</fullName>
    <active>true</active>
    <label>Employee Attendance</label>
</RecordType>