force-app/main/default/objects/Day_in_the_office__c/recordTypes/Visitor_Attendance.recordType-meta.xml
<RecordType>
    <fullName>Visitor_Attendance</fullName>
    <active>true</active>
    <label>Visitor Attendance</label>
</RecordType>