force-app/main/default/objects/Day_in_the_office__c/validationRules/Attendance_only_tomorrow_for_Employees.validationRule-meta.xml
<ValidationRule>
    <fullName>Attendance_only_tomorrow_for_Employees</fullName>
    <active>true</active>
    <errorConditionFormula>$User.ByPassVR__c = false
	&amp;&amp;
IF(RecordType.DeveloperName = &quot;Employee_Attendance&quot; &amp;&amp;  Attendance_Date__c != (TODAY()+1),true,false)</errorConditionFormula>
    <errorDisplayField>Attendance_Date__c</errorDisplayField>
    <errorMessage>You can only register for tomorrow.</errorMessage>
</ValidationRule>