force-app/main/default/objects/Day_in_the_office__c/validationRules/No_weekends_or_Mondays.validationRule-meta.xml
<ValidationRule>
    <fullName>No_weekends_or_Mondays</fullName>
    <active>true</active>
    <errorConditionFormula>$User.ByPassVR__c = false
	&amp;&amp;
IF(Day_In_the_Week__c =1  || Day_In_the_Week__c = 2,true,false)</errorConditionFormula>
    <errorDisplayField>Attendance_Date__c</errorDisplayField>
    <errorMessage>You cannot register for an attendance in Mondays Or Weekends.</errorMessage>
</ValidationRule>