force-app/main/default/objects/Day_in_the_office__c/validationRules/You_cant_attend_in_a_Day_in_the_Past.validationRule-meta.xml
<ValidationRule>
    <fullName>You_cant_attend_in_a_Day_in_the_Past</fullName>
    <active>true</active>
    <errorConditionFormula>Attendance_Date__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>Attendance_Date__c</errorDisplayField>
    <errorMessage>You can&apos;t attend in the past!</errorMessage>
</ValidationRule>