force-app/main/default/objects/Day_in_the_office__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Attendance_Date__c</columns>
    <columns>Attendee__c</columns>
    <columns>Day_of_the_Week__c</columns>
    <columns>Visitor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <group>HR_Group</group>
    </sharedTo>
</ListView>