force-app/main/default/objects/Day_in_the_office__c/listViews/Employee_Attendances.listView-meta.xml
<ListView>
    <fullName>Employee_Attendances</fullName>
    <columns>Attendance_Date__c</columns>
    <columns>Day_of_the_Week__c</columns>
    <columns>Attendee__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Day_in_the_office__c.Employee_Attendance</value>
    </filters>
    <label>Employee Attendances</label>
    <sharedTo>
        <group>HR_Group</group>
    </sharedTo>
</ListView>