force-app/main/default/objects/Day_in_the_office__c/listViews/My_Attendances.listView-meta.xml
<ListView>
    <fullName>My_Attendances</fullName>
    <columns>Attendee__c</columns>
    <columns>Attendance_Date__c</columns>
    <columns>Day_of_the_Week__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>isCurrentUserAttendee__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Attendances</label>
</ListView>